--- a/wercker.yml
+++ b/wercker.yml
@@ -1,10 +1,8 @@
 box: maven:3.5-jdk-8
 build:
   steps:
-    - script:
-        name: get code / compile / stage for docker .
-        code: |
-          cd /pipeline/source
-          mvn test
+    - xenoterracide/maven:
+        goals: test
+
             
         
